--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 blockquote.q {
-    color: #D4AF37;
+    color: #C41E3A;
     border-left: 4px solid #8B0000;
     font-style: italic;
     padding-left: 15px;
