--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     margin-right: 20%;
     border: 2px dotted black;
     padding: 10px 10px 10px 10px;
-    font-family: sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 blockquote.q {
